RESOLVED FIXED221091
[LFC][IFC] Line break (and word break opportunity) is not necessarily the last inline item on the line
https://bugs.webkit.org/show_bug.cgi?id=221091
Summary [LFC][IFC] Line break (and word break opportunity) is not necessarily the las...
alan
Reported 2021-01-28 10:05:50 PST
e.g <span><span>text<br></span></span> <- line breaks after the last </span>
Attachments
Patch (4.96 KB, patch)
2021-01-28 10:18 PST, alan
no flags
alan
Comment 1 2021-01-28 10:18:35 PST
EWS
Comment 2 2021-01-28 12:01:59 PST
Committed r272025: <https://trac.webkit.org/changeset/272025> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418653 [details].
Radar WebKit Bug Importer
Comment 3 2021-01-28 12:02:19 PST
Note You need to log in before you can comment on or make changes to this bug.