[LFC][IFC] Line break (and word break opportunity) is not necessarily the last inline item on the line https://bugs.webkit.org/show_bug.cgi?id=221091

Reviewed by Antti Koivisto.

While both <br> and <wbr> are valid wrap opportunities, the actual wrap position may be at a later position on the line.
e.g. <span style="border-right: 1px solid green">text<br></span> <- the green border should show up on the same line as the text even though it is "after" the forced line break.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineContent):
(WebCore::Layout::LineBuilder::candidateContentForLine):
(WebCore::Layout::LineBuilder::nextWrapOpportunity const):


Canonical link: https://commits.webkit.org/233447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272025 268f45cc-cd09-0410-ab3c-d52691b4dbfc